--- a/curso-2-main/index.html
+++ b/curso-2-main/index.html
@@ -8,11 +8,11 @@
 <body>
 <main>
     <div>
-       </p>um dia desse,dentro de um livro da biblioteca do colegio
-          eu descobri uma carta antiga sobre uma cidade perdida, 
-          escondida por riquezas e belezas naturais.
-          nessa carta, a autora deixa algumas pista para encontrar
-          essa cidade é eu decidi segui-la 
+       </p>um dia desses,dentro de um livro da biblioteca do colegio,
+           eu descobri uma carta antiga sobre uma cidade perdida,
+           escondida por riquezas e belezas naturais. 
+           nessa carta,a autora deixa alguma pista 
+           para encontrar essa cidade e eu decidi segui-la
       
 
 
