--- a/curso-2-main/index.html
+++ b/curso-2-main/index.html
@@ -8,12 +8,12 @@
 <body>
 <main>
     <div>
-       </p>um dia desses,dentro de um livro da biblioteca do colegio,
+       </p>um dia desse, dentro de um livro da bibloteca do colegio,
            eu descobri uma carta antiga sobre uma cidade perdida,
-           escondida por riquezas e belezas naturais. 
-           nessa carta,a autora deixa alguma pista 
-           para encontrar essa cidade e eu decidi segui-la
-      
+           escondida por riquezas e belezas naturais.
+           nessa carta, a autora deixa alguma pistas para 
+           encontrar essa cidade e eu decidi segui-las!
+    </p>
 
 
 
